src/objects/ffr__ReportingIntersection__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingintersection</customHelpPage>
    <description>Represent a cross between a column calculation and a row calculation.</description>
    <fields>
        <fullName>ffr__Apply__c</fullName>
        <label>Apply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apply Row Calculation</fullName>
                    <default>true</default>
                    <label>Apply Row Calculation</label>
                </value>
                <value>
                    <fullName>Apply Column Calculation</fullName>
                </value>
                <value>
                    <fullName>Leave blank</fullName>
                </value>
                <value>
                    <fullName>Apply Custom Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__CalculatedColumn__c</fullName>
        <label>Reporting Column Calculation</label>
        <referenceTo>ffr__ReportingCalculation__c</referenceTo>
        <relationshipLabel>Reporting Intersections</relationshipLabel>
        <relationshipName>ReportingIntersection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__CustomCalculationType__c</fullName>
        <label>Custom Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__Apply__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Row Calculation</fullName>
                    <default>true</default>
                    <label>Row Calculation</label>
                </value>
                <value>
                    <fullName>Column Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__CustomFormula__c</fullName>
        <label>Custom Formula</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__ParseTree__c</fullName>
        <label>Parse Tree</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__RowKey__c</fullName>
        <label>Row Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R01</fullName>
                </value>
                <value>
                    <fullName>R02</fullName>
                </value>
                <value>
                    <fullName>R03</fullName>
                </value>
                <value>
                    <fullName>R04</fullName>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R06</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R09</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
                <value>
                    <fullName>R11</fullName>
                </value>
                <value>
                    <fullName>R12</fullName>
                </value>
                <value>
                    <fullName>R13</fullName>
                </value>
                <value>
                    <fullName>R14</fullName>
                </value>
                <value>
                    <fullName>R15</fullName>
                </value>
                <value>
                    <fullName>R16</fullName>
                </value>
                <value>
                    <fullName>R17</fullName>
                </value>
                <value>
                    <fullName>R18</fullName>
                </value>
                <value>
                    <fullName>R19</fullName>
                </value>
                <value>
                    <fullName>R20</fullName>
                </value>
                <value>
                    <fullName>R21</fullName>
                </value>
                <value>
                    <fullName>R22</fullName>
                </value>
                <value>
                    <fullName>R23</fullName>
                </value>
                <value>
                    <fullName>R24</fullName>
                </value>
                <value>
                    <fullName>R25</fullName>
                </value>
                <value>
                    <fullName>R26</fullName>
                </value>
                <value>
                    <fullName>R27</fullName>
                </value>
                <value>
                    <fullName>R28</fullName>
                </value>
                <value>
                    <fullName>R29</fullName>
                </value>
                <value>
                    <fullName>R30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Intersection</label>
    <nameField>
        <label>Intersection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Intersections</pluralLabel>
    <recordTypes>
        <fullName>ffr__CalculatedColumnWithDataRangeTotal</fullName>
        <active>true</active>
        <description>Use this record type to add an intersection with a data range total calculation.</description>
        <label>Calculated Column with Data Range Total</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__CalculatedColumnWithRowCalculation</fullName>
        <active>true</active>
        <description>Use this record type to add an intersection with a row calculation.</description>
        <label>Calculated Column with Row Calculation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__CalculatedColumnWithSubtotal</fullName>
        <active>true</active>
        <description>Use this record type to add an intersection with a subtotal calculation.</description>
        <label>Calculated Column with Subtotal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>